package org.example.armamento;

public abstract class Armamento {
    public abstract Integer restarResistencia(Integer resistencia);
}
